--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,26 @@
 asgiref==3.3.4
-brotlipy==0.7.0
-certifi==2020.12.5
-cffi==1.14.4
-chardet==3.0.4
-cryptography==3.3.1
+boto3==1.17.108
+botocore==1.20.108
+certifi==2021.5.30
+cffi==1.14.5
+chardet==4.0.0
+cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.2.3
 django-allauth==0.44.0
 django-storages==1.11.1
 idna==2.10
-menuinst==1.4.16
+jmespath==0.10.0
 oauthlib==3.1.1
 Pillow==8.2.0
-pip==21.1.3
-pycosat==0.6.3
 pycparser==2.20
 PyJWT==2.1.0
-pyOpenSSL==20.0.0
-PySocks==1.7.1
+python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2021.1
-pywin32==228
-requests==2.25.0
+requests==2.25.1
 requests-oauthlib==1.3.0
-ruamel-yaml-conda==0.15.80
-setuptools==51.0.0.post20201207
-six==1.15.0
+s3transfer==0.4.2
+six==1.16.0
 sqlparse==0.4.1
-tqdm==4.54.1
-urllib3==1.25.11
-wheel==0.36.1
-win-inet-pton==1.1.0
-wincertstore==0.2
+urllib3==1.26.6
